frontend/wwwroot/scss/main.scss
@use 'abstracts/colors' as colors;
@use 'abstracts/placeholders' as *;
@use 'abstracts/variables' as variables;

main {
    font-size: 16px;
}

// ---------------------------
// HOME PAGE - splashes
// ---------------------------

.splash {
    // @extend %flex--column--center-horizontal;
    display: grid;

    // MOBILE: Single column
    grid-template-columns: 1fr;
    place-items: center;

    // TABLET: Two columns
    @media (min-width: 620px) {
        grid-template-columns: 1fr min-content 1fr;

        :nth-child(4) {
            display: none;
        }
    }

    // Desktop: One row
    @media (min-width: 1280px) {
        display: flex;
        height: 150px;

        :nth-child(4) {
            display: block;
        }
    }

    border: 1px solid colors.$primary--main;
    color: colors.$primary--main;
    padding: unset;
    border-radius: 0;
    margin: 25px 0 0 0;
}

.splash-item {
    @extend %flex--row--center;
    gap: 10px;
    padding: 30px 20px;
    flex-grow: 1;
}

.splash-separator {
    height: 2px;
    width: 80%;
    background: colors.opacity-set(colors.$primary--main, 0.2);

    @media (min-width: 620px) {
        width: 1px;
        height: 80%;
        margin: 0 50px;
        background: colors.$primary--main;
    }
}

.splash-item-svg {
    svg {
        fill: colors.$primary--main;
    }
}

.splash-item-text {
    font-size: 20px;

    strong {
        font-weight: 700;
    }
}

// Splash - Client

.splash-clients {
    @extend %flex--column;
    border-radius: 0;
    // height: 150px;
    margin: unset;
    padding: unset;
    border: 1px solid colors.$primary--main;
    border-top: none;
    color: colors.$primary--main;
    width: 100%;

    @media (min-width: 620px) {
        flex-direction: row;
    }
}

.splash-clients-text {
    padding: 20px;

    font-size: 20px;
    text-align: center;

    strong {
        font-weight: 700;
    }
}

.splash-clients-logos {
    @extend %flex--row--center-vertical;
    width: 100%;
    overflow-x: hidden;

    >* {
        height: 100%;
    }
}

@media (min-width: variables.$breakpoint--desktop) {}

